# playground

./: .gitignore  CLAUDE.md  README.md
001-lean-hello-world/: .projectile-cache.eld  Main.lean
002-magent/: Makefile  README.md
002-magent/lisp/: magent-agent-file.el  magent-agent-fix.el  magent-agent-info.el  magent-agent-registry.el  magent-agent-types.el  magent-agent.el  magent-api.el  magent-config.el  magent-permission.el  magent-session.el  magent-tools.el  magent-ui.el  magent.el
002-open-code-elisp/: Makefile  README.md
002-open-code-elisp/lisp/: opencode-agent.el  opencode-api.el  opencode-config.el  opencode-session.el  opencode-tools.el  opencode-ui.el  opencode.el
003-erp/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
003-erp/backend/: .gitignore  requirements.txt  run.py
003-erp/backend/app/: main.py
003-erp/backend/app/api/: __init__.py  items.py
003-erp/backend/app/core/: __init__.py  config.py  database.py
003-erp/backend/app/models/: __init__.py  base.py  item.py
003-erp/backend/app/schemas/: __init__.py  item.py
003-erp/frontend/: index.html
003-erp/frontend/css/: style.css
003-erp/frontend/js/: app.js
003-erp/scanners/: __init__.py  base.py  keyboard.py
003-erp/scripts/: init_db.py
